k8s/20-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pokedex-api
  namespace: pokedex
  labels:
    app: pokedex-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pokedex-api
  template:
    metadata:
      labels:
        app: pokedex-api
    spec:
      containers:
        - name: pokedex-api
          image: ghcr.io/angryraccoon77/pokedex-api:1.0.0
          ports:
            - containerPort: 8085
          readinessProbe:
            httpGet:
              path: /health
              port: 8085
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /health
              port: 8085
            initialDelaySeconds: 10
            periodSeconds: 15
          resources:
            requests:
              cpu: 50m
              memory: 64Mi
            limits:
              memory: 128Mi
