k8s/30-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pokedex-api
  namespace: pokedex
  labels:
    app: pokedex-api
spec:
  selector:
    app: pokedex-api
  ports:
    - port: 80
      targetPort: 8085
      name: http
